--- a/api-rest-crud-tests/src/main/resources/application.properties
+++ b/api-rest-crud-tests/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=api-rest-crud-tests
-server.port=9090
+server.port=${SERVER_PORT:9090}
 
 # Configuracion de la base de datos
 spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
@@ -13,7 +13,12 @@ spring.datasource.password=${DB_PASSWORD}
 ## update: Modifica la base de datos sin eliminar datos existentes
 ## validate: Valida que la estructura de la base de datos coincida con las entidades
 ## none: No realiza ninguna accion sobre la base de datos
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=${JPA_DDL:update}
+
+## Configuracion de la aplicacion
+# Habilita o deshabilita las referencias circulares en la inyeccion de dependencias.
+# Cuando es 'true', se permiten referencias circulares; cuando es 'false', se lanzara una excepcion en caso de referencias circulares.
+spring.main.allow-circular-references=true
 
 ## Habilita las transacciones durante la renderizacion de la vista
 spring.jpa.open-in-view=true
