Pipeline CI/CD microservicio

--- a/k8s-auth-demo/auth-service.yaml
+++ b/k8s-auth-demo/auth-service.yaml
@@ -22,7 +22,7 @@ spec:
         app: auth-service
     spec:
       containers:
-        - name: pais
+        - name: auth
           image: alvarosalazar/auth-service:latest
           ports:
             - containerPort: 8080
